--- a/templates/contact us.html
+++ b/templates/contact us.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Poppins:wght@400;700&display=swap"
         rel="stylesheet">
 
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="../css/style.css">
     <style>
      
     </style>
@@ -32,7 +32,6 @@
             </div>
         </nav>
     </header>
-
-    <h1>Projects</h1>
+ <h1>Contact Us</h1>
 </body>
 </html>
